<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    android:id="@+id/fragment_sign_in">

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/new_logo"
                android:padding="10dp"
                android:background="@drawable/logo_shape"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:visibility="gone"
                android:id="@+id/sign_in_screen_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginEnd="@dimen/indent_huge"
                android:layout_marginBottom="@dimen/indent_enormous"
                android:padding="@dimen/indent_large"
                android:background="@drawable/logo_shape"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_36"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_field_height"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginTop="@dimen/indent_medium"
                android:layout_marginEnd="@dimen/indent_huge"
                android:background="@drawable/input_field_shape"
                android:inputType="textPassword"
                android:paddingStart="@dimen/indent_medium"
                android:paddingEnd="@dimen/indent_medium"
                android:hint="Пароль..."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_hint" />

            <EditText
                android:id="@+id/api_debug"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_field_height"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginTop="@dimen/indent_enormous"
                android:layout_marginEnd="@dimen/indent_huge"
                android:background="@drawable/input_field_shape"
                android:inputType="text"
                android:visibility="gone"
                android:paddingStart="@dimen/indent_medium"
                android:paddingEnd="@dimen/indent_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_password" />

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_field_height"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginTop="@dimen/indent_medium"
                android:layout_marginEnd="@dimen/indent_huge"
                android:background="@drawable/input_field_shape"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/indent_medium"
                android:paddingEnd="@dimen/indent_medium"
                android:hint="E-mail..."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_username_hint" />

            <TextView
                android:id="@+id/sign_up_username_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_enormous"
                android:textColor="@color/primaryMiddle"
                android:text="@string/enter_your_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_in_password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_enormous"
                android:layout_marginTop="@dimen/indent_large"
                android:textColor="@color/primaryMiddle"
                android:text="@string/password_field_hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create_workspace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginEnd="@dimen/indent_huge"
                style="@style/SignInOutButtonStyle1"
                android:text="@string/action_sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_in_screen_register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_medium"
                android:text="@string/register_user_suggestion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_create_workspace" />

            <TextView
                android:id="@+id/to_register_user_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_medium"
                android:text="@string/action_sign_up"
                android:textColor="@color/primaryMiddle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_screen_register_user" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>
