<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/transparent"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="25">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_back_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@android:color/transparent"
                android:text="@string/back_to_previous_screen"

                android:textColor="@color/black"
                app:elevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_in_screen_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginEnd="@dimen/indent_huge"
                android:layout_marginBottom="@dimen/indent_enormous"
                android:padding="@dimen/indent_large"

                android:text="Регистрация"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_36"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="55">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/enter_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_field_height"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginTop="@dimen/indent_medium"
                android:layout_marginEnd="@dimen/indent_huge"
                android:background="@drawable/input_field_shape"
                android:inputType="textPassword"
                android:paddingStart="@dimen/indent_medium"
                android:paddingEnd="@dimen/indent_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_password_hint" />

            <EditText
                android:id="@+id/enter_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_field_height"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginTop="@dimen/indent_medium"
                android:layout_marginEnd="@dimen/indent_huge"
                android:background="@drawable/input_field_shape"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/indent_medium"
                android:paddingEnd="@dimen/indent_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_email_hint" />

            <TextView
                android:id="@+id/sign_up_email_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_enormous"
                android:text="@string/login_field_hint"
                android:textColor="@color/primaryMiddle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_in_password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_enormous"
                android:layout_marginTop="@dimen/indent_large"
                android:text="@string/password_field_hint"
                android:textColor="@color/primaryMiddle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_email" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_in"
                style="@style/SignInOutButtonStyle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/indent_huge"
                android:layout_marginEnd="@dimen/indent_huge"
                android:text="@string/action_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_in_screen_register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/indent_medium"
                android:gravity="center"
                android:paddingLeft="@dimen/indent_huge"
                android:paddingRight="@dimen/indent_huge"
                android:text="Вам на почту придет письмо для подтверждения"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>